--- a/cv.html
+++ b/cv.html
@@ -54,10 +54,10 @@
                         <h3 class="text-black-75 mb-4 fs-4">Education</h3>
                         
                         <p class="text-black-75 mb-4">
-                            (2020 - Present)</br>
-                            PhD in Stellar Physics</br>
-                            Dublin Institute for Advanced Studies & Armagh Observatory and Planetarium,</br>
-                            through Queen's University Belfast
+                            (2020 - 2024)</br>
+                            Doctor of Philosophy (PhD)</br>
+                            Thesis Title: Multiwavelength observations of flaring activity on the Sun and M dwarf stars</br>
+                            Queen's University Belfast
                         </p>
                         <p class="text-black-75 mb-4">
                             (2016 - 2020)</br>
@@ -85,7 +85,7 @@
                             <a href='https://doi.org/10.1093/mnras/stac2143'>https://doi.org/10.1093/mnras/stac2143</a>
                         </p>
                         <p class="text-black-75 mb-4">
-                            Rigney, J. et al. <i>'earching for stellar flares from low mass stars using ASKAP and TESS'</i>.</br> 
+                            Rigney, J. et al. <i>'Searching for stellar flares from low mass stars using ASKAP and TESS'</i>.</br> 
                             Monthly Notices of the Royal Astronomical Society (2022).</br>
                             <a href='https://doi.org/10.1051/0004-6361/202348452'>https://doi.org/10.1051/0004-6361/202348452</a>
                         </p>
