--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
 
             <div class="row gx-4 py-3">
-              <div class="col-sm-12">
+              <div class="col-sm-8">
                 <div class="p-3 border rounded bg-light">
 
                 <!--<a class="weatherwidget-io" href="https://forecast7.com/en/53d35n6d26/dublin/" data-label_1="DUBLIN" data-label_2="WEATHER" data-theme="original" data-basecolor="#142E54" data-lowcolor="#ffffff" data-raincolor="#ffffff" >DUBLIN WEATHER</a>
@@ -280,7 +280,13 @@
                 
                 </div>
               </div>
-   
+
+              <div class="col-sm-4">
+                <div class="p-3 border rounded bg-light">
+                    <iframe style="border: 0px #ccc solid; " src="https://www.met.ie/widgets/observations/" name="MEWarning" width="225" height="205" frameborder="0" marginwidth="0px" marginheight="0px" scrolling="no" allowfullscreen="allowfullscreen" title="weather station observations widget"></iframe>
+                </div>
+              </div>
+            
             </div>
 
             <div class="row gx-4 py-3">
