--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
-                        <h1 class="text-white font-weight-bold">Jeremy Rigney</h1>
+                        <h1 class="text-white font-weight-bold">Jeremy Rigney, PhD.</h1>
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">Lindsay PhD Scholar at the Dublin Institute for Advanced Studies</br>&  Armagh Observatory and Planetarium</p>
+                        <p class="text-white-75 mb-5">Stellar Astrophysicist</br>&  Science Communicator/p>
                         <a class="btn btn-primary btn-xl" href="#about">More About Me</a>
                     </div>
                 </div>
