--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="styles.css" rel="stylesheet" />
+
+        <script>
+            if (window.location.hostname === 'www.jeremy.ie') {
+                window.location.href = 'https://jeremy.ie' + window.location.pathname;
+            }
+        </script>
+
     </head>
     <body id="page-top">
         <!-- Navigation-->
