--- a/cv.html
+++ b/cv.html
@@ -23,11 +23,11 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand navbar-brand-cv" href="https://dias.ie/jeremy">Jeremy.</a>
+                <a class="navbar-brand navbar-brand-cv" href="https://jeremy.ie">Jeremy.</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
-                        <li class="nav-item nav-item-cv"><a class="nav-link nav-link-cv" href="https://dias.ie/jeremy">Home</a></li>
+                        <li class="nav-item nav-item-cv"><a class="nav-link nav-link-cv" href="https://jeremy.ie">Home</a></li>
                         <li class="nav-item nav-item-cv"><a class="nav-link nav-link-cv" href="index.html#about">About</a></li>
                         <li class="nav-item nav-item-cv"><a class="nav-link nav-link-cv" href="index.html#research">Research</a></li>
                         <li class="nav-item nav-item-cv"><a class="nav-link nav-link-cv" href="index.html#dashboard">Dashboard</a></li>
@@ -93,6 +93,7 @@
                             Rigney, J., Quinn, J., Mooney, S. <i>’A Feasibility Study for Blazar Monitoring at I-LOFAR’</i>.</br> 
                             Poster display at the Irish National Astronomy Meeting (2018) 
                         </p> --->
+
 
 
 
