--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 mb-5">Stellar Astrophysicist</br>&  Science Communicator</p>
-                        <a class="btn btn-primary btn-xl" href="#about">HALLO</a>
+                        <a class="btn btn-primary btn-xl" href="#about">About Me</a>
                     </div>
                 </div>
             </div>
