--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 										</header>
 										<p>I hold a PhD in astrophysics from Queen's University Belfast. My research focused on observing the Sun and other stars using some of the largest and most advanced telescopes in the world to better understand stellar dynamics. Throughout my PhD I have presented my research at international conferences, and published peer reviewed research, collaborating with colleagues across the globe.</p>
 
-										<p>I am also an acomplished science communicator, and have presented to groups of all ages. I have represented Ireland and won awards for science outreach and public engagement. </p>
+										<p>I am also an accomplished science communicator, and have presented to groups of all ages. I have represented Ireland and won awards for science outreach and public engagement. </p>
 										<ul class="actions">
 											<li><a href="#first" class="button">Learn More</a></li>
 										</ul>
@@ -156,7 +156,7 @@
 								<span class="image main"><img src="images/public_speaking.png" alt="" /></span>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="speaking.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
 							</section>
