--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 					<footer id="footer">
 						<section id="cta">
 							<h2>Get in Touch</h2>
-							<p>I welcome opportunities to engage in public speaking, particularly at science festivals, open days, and similar events. Feel free to reach out with any inquiries.</p>
+							<p>I welcome opportunities to engage in public speaking, particularly at science festivals, open days, and similar events. Feel free to reach out with any enquiries.</p>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">See Previous Talks</a></li>
 							</ul>
