--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<ul>
 							<li><a href="#intro" class="active">About</a></li>
 							<li><a href="#first">Education</a></li>
-							<li><a href="#second">Skills and Experience</a></li>
+							<li><a href="#second">Experience</a></li>
 							<li><a href="#third">Public Speaking</a></li>
 							<li><a href="#cta">Contact</a></li>
 						</ul>
