--- a/cv.html
+++ b/cv.html
@@ -16,7 +16,7 @@
 		<meta name="author" content="Jeremy Rigney">
 		<meta name="description" content="I hold a PhD in astrophysics from Queen's University Belfast. My research focused on observing the Sun and other stars using some of the largest and most advanced telescopes in the world to better understand stellar dynamics. Throughout my PhD I have presented my research at international conferences, and published peer reviewed research, collaborating with colleagues across the globe."/>
 		<meta name="keywords" content="Jeremy Rigney, Jeremy, astronomy ireland, irish astronomy, jeremy astronomy, jeremy irish astronomy, jeremy science communication, science communication ireland, Jeremy Rigney astro, Dublin Institute for Advanced Studies, AOP, Armagh Observatory, Queen's University Belfast, Lindsay Scholar, jeremy queens, jeremy dias, jeremy armagh"/>
-		<script>
+		<script type='text/javascript'>
         	function toggleMenu() {
         	    var menu = document.getElementById("menu");
         	    if (menu.style.display === "flex") {
@@ -195,7 +195,7 @@
 							<h2>Get in Touch</h2>
 							<p>I welcome opportunities to engage in public speaking, particularly at science festivals, open days, and similar events. Feel free to reach out with any enquiries.</p>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">See Previous Talks</a></li>
+								<li><a href="speaking.html" class="button">See Previous Talks</a></li>
 							</ul>
 						</section>
 						<section>
