--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<meta name="author" content="Jeremy Rigney">
 		<meta name="description" content="I hold a PhD in astrophysics from Queen's University Belfast. My research focused on observing the Sun and other stars using some of the largest and most advanced telescopes in the world to better understand stellar dynamics. Throughout my PhD I have presented my research at international conferences, and published peer reviewed research, collaborating with colleagues across the globe."/>
 		<meta name="keywords" content="Jeremy Rigney, Jeremy, astronomy ireland, irish astronomy, jeremy astronomy, jeremy science communication, science communication ireland, Jeremy Rigney astronomy, Dublin Institute for Advanced Studies, AOP, Armagh Observatory, Queen's University Belfast, Lindsay Scholar">
-		<script>
+		<script type='text/javascript'>
         	function toggleMenu() {
         	    var menu = document.getElementById("menu");
         	    if (menu.style.display === "flex") {
@@ -37,7 +37,7 @@
 					<header id="header" class="alt">
 						<!--<span class="logo"><img src="images/logo.svg" alt="" /></span>-->
 						<h1>Jeremy Rigney, PhD</h1>
-						<p>Astrophysicist<br/>
+						<p>Astrophysicist<span id='mob_only'> & </span><br/>
 						   Science Communicator<br/>
 						   <ul class="icons">
 								<li><a href="https://x.com/jeremyrigney" target="_blank" class="icon brands fa-x-twitter"><span class="label">Twitter</span></a></li>
@@ -209,7 +209,7 @@
 							<h2>Get in Touch</h2>
 							<p>I welcome opportunities to engage in public speaking, particularly at science festivals, open days, and similar events. Feel free to reach out with any enquiries.</p>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">See Previous Talks</a></li>
+								<li><a href="speaking.html" class="button">See Previous Talks</a></li>
 							</ul>
 						</section>
 						<section>
