--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 										</header>
 										<p>I hold a PhD in astrophysics from Queen's University Belfast. My research focused on observing the Sun and other stars using some of the largest and most advanced telescopes in the world to better understand stellar dynamics. Throughout my PhD I have presented my research at international conferences, and published peer reviewed research, collaborating with colleagues across the globe.</p>
 
-										<p>I am also an accomplished science communicator, and have presented to groups of all ages. I have represented Ireland and won awards for science outreach and public engagement. </p>
+										<p>I am also an experienced science communicator, and have presented to groups of all ages. I have represented Ireland and won awards for science outreach and public engagement. </p>
 										<ul class="actions">
 											<li><a href="#first" class="button">Learn More</a></li>
 										</ul>
@@ -160,7 +160,7 @@
 
 
 
-								<p class="content">Throughout my PhD at Queen’s University Belfast, I developed and implemented large-scale data analysis pipelines in Python to process and visualise terabyte-scale astronomical datasets. My work has involved high-performance computing, statistical analysis of time-series and spatial data. I have experience of leading collaborative research projects focused on space weather monitoring. From working as part of an Agile software development team to leading projects spanning multiple continents, I have been fortunate to gain valuable experience and skills that are transferrable across industry and academia.</p>
+								<p class="content">Throughout my PhD at Queen’s University Belfast, I have experience of leading collaborative research projects focused on space weather monitoring. I have developed and implemented large-scale data analysis pipelines in Python to process and visualise terabyte-scale astronomical datasets. My work has involved high-performance computing, statistical analysis of time-series and spatial data. From working as part of an Agile software development team to leading projects spanning multiple continents, I have been fortunate to gain valuable experience and skills that are transferrable across industry and academia.</p>
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="cv.html" class="button">Learn More</a></li>
@@ -190,7 +190,7 @@
 							<section class="main special">
 								<header class="major">
 									<h2>Projects</h2>
-									<p>I am working uploading projects I have been working on over the years <br />
+									<p>I will be uploading projects I have been working on over the years <br />
 									to Github, Keep an eye on my profile for some appearing soon!</p>
 								</header>
 								<footer class="major">
