added post to speaking.html
Added upcoming talk for irish astronomy week

--- a/speaking.html
+++ b/speaking.html
@@ -98,6 +98,16 @@
 
 							</br>
 
+
+								<h3 style="margin-bottom:5px;">Upcoming - Irish Astronomy Week "Walk and Talk" Tours</h3>
+								<h5 style="margin-bottom:0px;">May 2025 - Birr Castle Demesne, Ireland</h5><h6><b>Academic &nbsp;|&nbsp; Science Meeting</b></h6>
+								<p><span class="image left"><img src="images/alberto_leviathan.png" alt=""/></span>Join us during Irish Astronomy Week for an enlightening “Leviathan to LOFAR” walk and talk at Birr Castle Demesne.
+								</br>
+								Led by astrophysicist, Dr. Jeremy Rigney, this guided tour will explore the rich astronomical heritage of Birr, from the historic 19th-century Leviathan telescope to the cutting-edge 21st-century I-LOFAR radio telescope. Participants will gain insights into the engineering marvels of the Leviathan, once the world’s largest telescope, and discover the groundbreaking research conducted at the I-LOFAR observatory, highlighting Ireland’s pivotal role in the future of radio astronomy.
+								</br>
+								More info and tickets available on the <a href="https://birrcastle.com/event/leviathan-to-lofar-walk-talks/" target="_blank">Birr Castle Website</a>.</p>
+								<div style="clear:left"></div>
+
 								<h3 style="margin-bottom:5px;">IAU Symposium 388: Solar and Stellar Coronal Mass Ejections</h3>
 								<h5 style="margin-bottom:0px;">May 2024 - Krakow, Poland</h5><h6><b>Academic &nbsp;|&nbsp; Science Meeting</b></h6>
 								<p><span class="image left"><img src="images/iau_krakow.jpg" alt=""/></span>I had the opportunity to attend the 388th IAU Symposium in Poland in mid-2024. I was accepted for a poster presentation for my research examining a solar flare and corresponding shockwave. The conference took place over five days in the culture-rich city of Krakow. Over 150 attendees participated in talks, breakout sessions and poster presntations thoughout. I had excellent discussions with leaders in the field of solar physics and space weather.</p>
