improved intro text speaking.html

--- a/speaking.html
+++ b/speaking.html
@@ -63,15 +63,17 @@
 
 								<h1 class="cvtitle">Public Speaking</h1>
 							</br>
+
 							<p style='width:90%; margin: 0px auto; margin-bottom:10px;'>
-								Throughout my degree and particularly during my PhD I actively engaged in science communication by attending and presenting at professional conferences, delivering invited seminars, and giving talks at astronomical societies, as well as to college and professional groups. Through speaking to thousands of people both within the academic community and the general public, I am highly skilled at presenting a topic at many different levels, selecting the necessary information to clearly and concisely convey the information. 
+							Throughout my academic journey—particularly during my PhD—I have been deeply involved in science communication, sharing my research and expertise with a wide range of audiences. I have presented at professional conferences, delivered invited seminars, and given engaging talks to astronomical societies, as well as to college and professional groups. These experiences have allowed me to communicate complex scientific ideas effectively to diverse audiences, from experts in the field to members of the general public. Having spoken to thousands of people in various settings, I have developed the ability to tailor my presentations to different levels of expertise, ensuring clarity and accessibility while maintaining scientific rigor. 
 							</p>
 							<p style='width:90%; margin: 0px auto; margin-bottom:10px;'>
-								I was fortunate enough to be presented with awards in recognition of my achievements in public speaking and science communication. In 2022 I was awarded the Peter Curran Award for Best Postgraduate Presentation at the Irish National Astronomy Meeting. In 2024 I won Rosse Medal for best postgraduate presenation at the Institute of Physics Ireland Spring Conference. This qualified me for the IOP Three Minute Wonder UK and Ireland Final held in the Royal Instutition in London. I subsequently won the Audience Vote Award for my presentation at this competition. 
+							My dedication to public speaking and science communication has been recognized through several prestigious awards. In 2022, I received the Peter Curran Award for Best Postgraduate Presentation at the Irish National Astronomy Meeting. In 2024, I was honored with the Rosse Medal for Best Postgraduate Presentation at the Institute of Physics Ireland Spring Conference, which qualified me for the IOP Three Minute Wonder UK and Ireland Final at the historic Royal Institution in London. At this competition, I was delighted to win the Audience Vote Award for my presentation.
 							</p>
 							<p style='width:90%; margin: 0px auto; margin-bottom:25px;'>
-								I have provided a brief summary of many of my previous presentations and talks below. If you would like to get in touch to enquire about a speaking engagement, please <a href ="#cta">click here</a> to be directed to my contact information and social media. 
+							Below, you will find a selection of my past presentations and talks. If you are interested in booking me for a speaking engagement or would like to learn more, please <a href ="#cta">click here</a> to access my contact information and social media.	
 							</p>
+
 							<ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-rocket"></span>
