--- a/speaking.html
+++ b/speaking.html
@@ -65,7 +65,7 @@
 							</br>
 
 							<p style='width:90%; margin: 0px auto; margin-bottom:10px;'>
-							Throughout my academic journey—particularly during my PhD—I have been deeply involved in science communication, sharing my research and expertise with a wide range of audiences. I have presented at professional conferences, delivered invited seminars, and given engaging talks to astronomical societies, as well as to college and professional groups. These experiences have allowed me to communicate complex scientific ideas effectively to diverse audiences, from experts in the field to members of the general public. Having spoken to thousands of people in various settings, I have developed the ability to tailor my presentations to different levels of expertise, ensuring clarity and accessibility while maintaining scientific rigor. 
+							Throughout my academic journey, particularly during my PhD, I have been deeply involved in science communication, sharing my research and expertise with a wide range of audiences. I have presented at professional conferences, delivered invited seminars, and given engaging talks to astronomical societies, as well as to college and professional groups. These experiences have allowed me to communicate complex scientific ideas effectively to diverse audiences, from experts in the field to members of the general public. Having spoken to thousands of people in various settings, I have developed the ability to tailor my presentations to different levels of expertise, ensuring clarity and accessibility while maintaining scientific rigor. 
 							</p>
 							<p style='width:90%; margin: 0px auto; margin-bottom:10px;'>
 							My dedication to public speaking and science communication has been recognized through several prestigious awards. In 2022, I received the Peter Curran Award for Best Postgraduate Presentation at the Irish National Astronomy Meeting. In 2024, I was honored with the Rosse Medal for Best Postgraduate Presentation at the Institute of Physics Ireland Spring Conference, which qualified me for the IOP Three Minute Wonder UK and Ireland Final at the historic Royal Institution in London. At this competition, I was delighted to win the Audience Vote Award for my presentation.
@@ -105,7 +105,7 @@
 								<h5 style="margin-bottom:0px;">May 2025 - Birr Castle Demesne, Ireland</h5><h6><b>Academic &nbsp;|&nbsp; Science Meeting</b></h6>
 								<p><span class="image left"><img src="images/alberto_leviathan.png" alt=""/></span>Join us during Irish Astronomy Week for an enlightening “Leviathan to LOFAR” walk and talk at Birr Castle Demesne.
 								</br>
-								Led by astrophysicist, Dr. Jeremy Rigney, this guided tour will explore the rich astronomical heritage of Birr, from the historic 19th-century Leviathan telescope to the cutting-edge 21st-century I-LOFAR radio telescope. Participants will gain insights into the engineering marvels of the Leviathan, once the world’s largest telescope, and discover the groundbreaking research conducted at the I-LOFAR observatory, highlighting Ireland’s pivotal role in the future of radio astronomy.
+								This guided tour will explore the rich astronomical heritage of Birr, from the historic 19th-century Leviathan telescope to the cutting-edge 21st-century I-LOFAR radio telescope. Participants will gain insights into the engineering marvels of the Leviathan, once the world’s largest telescope, and discover the groundbreaking research conducted at the I-LOFAR observatory, highlighting Ireland’s pivotal role in the future of radio astronomy.
 								</br>
 								More info and tickets available on the <a href="https://birrcastle.com/event/leviathan-to-lofar-walk-talks/" target="_blank">Birr Castle Website</a>.</p>
 								<div style="clear:left"></div>
@@ -259,14 +259,14 @@
 
 								<h3 style="margin-bottom:5px;">STFC Introductory Course in Solar and Solar-Terrestrial Physics</h3>
 								<h5 style="margin-bottom:0px;">August 2021 - University of Warwick, United Kingdom</h5> <h6><b>Academic &nbsp;|&nbsp; Science Meeting</b></h6>
-								<p><span class="image left"><img src="images/pic05.jpg" alt="" /></span></p>
+								<p><span class="image left"><img src="images/pic05.jpg" alt="" /></span>https://www.uksolphys.org/summer-schools/stfc-introductory-course-in-solar-and-solar-terrestrial-physics-2021%E2%80%A8/</p>
 								<div style="clear:left"></div>
 
 								<hr>
 
 								<h3 style="margin-bottom:5px;">ASKAP-MeerKAT Telescope Consortium Meeting</h3>
 								<h5 style="margin-bottom:0px;">April 2021 - Online (Australia & South Africa)</h5> <h6><b>Academic &nbsp;|&nbsp; Science Meeting</b></h6>
-								<p><span class="image left"><img src="images/pic05.jpg" alt="" /></span>Lorem Ipsum fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. https://www.uksolphys.org/summer-schools/stfc-introductory-course-in-solar-and-solar-terrestrial-physics-2021%E2%80%A8/</p>
+								<p><span class="image left"><img src="images/pic05.jpg" alt="" /></span></p>
 
 								
 
