--- a/speaking.html
+++ b/speaking.html
@@ -101,7 +101,7 @@
 							</br>
 
 								<h3 style="margin-bottom:5px;">Upcoming - Irish Astronomy Week "Walk and Talk" Tours</h3>
-								<h5 style="margin-bottom:0px;">May 2025 - Birr Castle Demesne, Ireland</h5><h6><b>Academic &nbsp;|&nbsp; Science Meeting</b></h6>
+								<h5 style="margin-bottom:0px;">May 2025 - Birr Castle Demesne, Ireland</h5><h6><b>Education and Public Engagment</b></h6>
 								<p><span class="image left"><img src="images/alberto_leviathan.png" alt=""/></span>Join us during Irish Astronomy Week for an enlightening “Leviathan to LOFAR” walk and talk at Birr Castle Demesne.
 								</br>
 								This guided tour will explore the rich astronomical heritage of Birr, from the historic 19th-century Leviathan telescope to the cutting-edge 21st-century I-LOFAR radio telescope. Participants will gain insights into the engineering marvels of the Leviathan, once the world’s largest telescope, and discover the groundbreaking research conducted at the I-LOFAR observatory, highlighting Ireland’s pivotal role in the future of radio astronomy.
