--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 <html>
 	<head>
 		<title>Jeremy Rigney | Home</title>
+
+		<script type="application/ld+json">
+		{
+		  "@context": "https://schema.org",
+		  "@type": "WebSite",
+		  "name": "Jeremy Rigney",
+		  "alternateName": "Jeremy Rigney",
+		  "url": "https://jeremy.ie/"
+		}
+		</script>
 		<!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="images/favicon.png"/>
 		<meta charset="utf-8" />
