--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 											<li><a href="#first" class="button">Learn More</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/jr_profile.jpg" alt="" /></span>
+									<span class="image"><img src="images/jr_profile.jpg" alt="Profile photo, out of focus galaxy in the background." title="Profile photo, out of focus galaxy in the background." /></span>
 								</div>
 							</section>
 
@@ -139,6 +139,10 @@
 
 
 								<p class="content">Throughout my PhD at Queen’s University Belfast, I have experience of leading collaborative research projects focused on space weather monitoring. I have developed and implemented large-scale data analysis pipelines in Python to process and visualise terabyte-scale astronomical datasets. My work has involved high-performance computing, statistical analysis of time-series and spatial data. From working as part of an Agile software development team to leading projects spanning multiple continents, I have been fortunate to gain valuable experience and skills that are transferrable across industry and academia.</p>
+
+
+								<span class="image"><img src="images/DSC_3674.jpg" alt="Using a Celestron telescope within the House Dome at Dunsink Observatory." title = "Using a Celestron telescope within the House Dome at Dunsink Observatory." height="300px"/></span>
+								<span class="image"><img src="images/JR_Dunsink_Ryanair_Moon_compressed.jpg" alt="Ryanair Flight  FR2970 from Tenerife to Edinburgh passing in front of a 50% illuminated moon." title = "Ryanair Flight  FR2970 from Tenerife to Edinburgh passing in front of a 50% illuminated moon." height="300px"/></span>
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="cv.html" class="button">Learn More</a></li>
