--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@
         	}
     	</script>
 	</head>
+
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-6G0WFV4TS8"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-6G0WFV4TS8');
+	</script>
+	
 	<body class="is-preload">
 
 		<!-- Wrapper -->
