--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	  function gtag(){dataLayer.push(arguments);}
 	  gtag('js', new Date());
 
-	  gtag('config', 'G-Q3MJQT65KX');
+	  gtag('config', 'G-6G0WFV4TS8');
 	</script>
 	
 	<body class="is-preload">
