added image on homepage

--- a/index.html
+++ b/index.html
@@ -154,6 +154,9 @@
 
 								<span class="image"><a href="https://jeremy.ie/images/DSC_3674.jpg" target="_blank"><img src="images/DSC_3674.jpg" alt="Using a Celestron telescope within the House Dome at Dunsink Observatory." title = "Using a Celestron telescope within the House Dome at Dunsink Observatory. Image Credit: Chris Burger-Schlleiden" height="300px"/></a></span>
 								<span class="image"><a href="https://jeremy.ie/images/JR_Dunsink_Ryanair_Moon_signed.jpg" target="_blank"><img src="images/JR_Dunsink_Ryanair_Moon_signed.jpg" alt="Ryanair Flight  FR2970 from Tenerife to Edinburgh passing in front of a 50% illuminated moon." title = "Ryanair Flight  FR2970 from Tenerife to Edinburgh passing in front of a 50% illuminated moon." height="300px"/></a></span>
+								<span class="image"><a href="https://jeremy.ie/images/dunsink_poster_jr_signed.png" target="_blank"><img src="images/dunsink_poster_jr_signed.png" alt="Film photo I took of Dunsink Observatory edited to show JWST image of Casseopeia A in the background." title = "Film photo I took of Dunsink Observatory edited to show JWST image of Casseopeia A in the background." height="300px"/></a></span>
+
+								
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="cv.html" class="button">Learn More</a></li>
