--- a/speaking.html
+++ b/speaking.html
@@ -99,19 +99,31 @@
 								</ul>
 
 							</br>
-								<h3 style="margin-bottom:5px;">Upcoming - University of Galway Astronomy Society</h3>
+								<h3 style="margin-bottom:5px;">Upcoming - Dublin Astronomical Society</h3>
 								<h5 style="margin-bottom:0px;">May 2025 - Birr Castle Demesne, Ireland</h5><h6><b>Education and Public Engagment</b></h6>
-								<p><span class="image left"><img src="images/alberto_leviathan.png" alt=""/></span>This will be a tour for the University of Galway Astronomy Society, exploring the history of astronomy at Birr Castle Demesne. The Irish LOw Frequency ARray (I-LOFAR) will be discussed in detail, with the role of Irish astronomers and astrophysicists discussed.
+								<p><span class="image left"><img src="images/pic05.png" alt=""/></span>This will be a tour for the Dublin Astronomical Society Society, exploring the history of astronomy at Birr Castle Demesne. The Irish LOw Frequency ARray (I-LOFAR) will be discussed in detail.
 								</p>
 								<div style="clear:left"></div>
 
+								<hr>
+
+								<h3 style="margin-bottom:5px;">Upcoming - University of Galway Astronomy Society</h3>
+								<h5 style="margin-bottom:0px;">May 2025 - Birr Castle Demesne, Ireland</h5><h6><b>Education and Public Engagment</b></h6>
+								<p><span class="image left"><img src="images/pic05.png" alt=""/></span>This will be a tour for the University of Galway Astronomy Society, exploring the history of astronomy at Birr Castle Demesne. The Irish LOw Frequency ARray (I-LOFAR) will be discussed in detail.
+								</p>
+								<div style="clear:left"></div>
+
+								<hr>
+
 								<h3 style="margin-bottom:5px;">Irish Astronomy Week "Walk and Talk" Tours</h3>
 								<h5 style="margin-bottom:0px;">May 2025 - Birr Castle Demesne, Ireland</h5><h6><b>Education and Public Engagment</b></h6>
-								<p><span class="image left"><img src="images/alberto_leviathan.png" alt=""/></span>I gave two tours as part of Irish Astronomy Week, titled “Leviathan to LOFAR walk and talk" at <a href="https://birrcastle.com/" target="_blank">Birr Castle Demesne</a>.
+								<p><span class="image left"><img src="images/alberto_leviathan.png" alt=""/></span>I gave two tours as part of Irish Astronomy Week, titled “Leviathan to LOFAR Walk and Talk" at <a href="https://birrcastle.com/" target="_blank">Birr Castle Demesne</a>.
 								</br>
 								This guided tour explored the rich astronomical heritage of Birr, from the historic 19th-century Leviathan telescope to the cutting-edge 21st-century I-LOFAR radio telescope. I covered the engineering marvels of the Leviathan, once the world’s largest telescope, and the groundbreaking research conducted at I-LOFAR, highlighting Ireland’s pivotal role in the future of radio astronomy.
 								</p>
 								<div style="clear:left"></div>
+
+								<hr>
 
 								<h3 style="margin-bottom:5px;">IAU Symposium 388: Solar and Stellar Coronal Mass Ejections</h3>
 								<h5 style="margin-bottom:0px;">May 2024 - Krakow, Poland</h5><h6><b>Academic &nbsp;|&nbsp; Science Meeting</b></h6>
