updated speaking events

--- a/speaking.html
+++ b/speaking.html
@@ -100,7 +100,7 @@
 
 							</br>
 								<h3 style="margin-bottom:5px;">Upcoming - Dublin Astronomical Society</h3>
-								<h5 style="margin-bottom:0px;">May 2025 - Birr Castle Demesne, Ireland</h5><h6><b>Education and Public Engagment</b></h6>
+								<h5 style="margin-bottom:0px;">April 2025 - Birr Castle Demesne, Ireland</h5><h6><b>Education and Public Engagment</b></h6>
 								<p><span class="image left"><img src="images/pic05.png" alt=""/></span>This will be a tour for the Dublin Astronomical Society Society, exploring the history of astronomy at Birr Castle Demesne. The Irish LOw Frequency ARray (I-LOFAR) will be discussed in detail.
 								</p>
 								<div style="clear:left"></div>
@@ -108,15 +108,35 @@
 								<hr>
 
 								<h3 style="margin-bottom:5px;">Upcoming - University of Galway Astronomy Society</h3>
-								<h5 style="margin-bottom:0px;">May 2025 - Birr Castle Demesne, Ireland</h5><h6><b>Education and Public Engagment</b></h6>
+								<h5 style="margin-bottom:0px;">April 2025 - Birr Castle Demesne, Ireland</h5><h6><b>Education and Public Engagment</b></h6>
 								<p><span class="image left"><img src="images/pic05.png" alt=""/></span>This will be a tour for the University of Galway Astronomy Society, exploring the history of astronomy at Birr Castle Demesne. The Irish LOw Frequency ARray (I-LOFAR) will be discussed in detail.
 								</p>
 								<div style="clear:left"></div>
 
 								<hr>
 
+								<h3 style="margin-bottom:5px;">Upcoming - Eclipse Observing at Birr Castle</h3>
+								<h5 style="margin-bottom:0px;">March 29, 2025 - Birr Castle Demesne, Ireland</h5><h6><b>Education and Public Engagment</b></h6>
+								<p><span class="image left"><img src="images/birr_gen_tour_img.jpg" alt=""/></span>
+								Join Birr Castle for a stunning partial solar eclipse viewing this Saturday morning! Dr. Jeremy Rigney will guide you through the experience with a telescope (please note, you will not be viewing through the Great Leviathan Telescope).
+								</br>
+								This event is included in the general admission price and is free for Friends of Birr Castle Demesne. General admission <a href="https://ecom.roller.app/birrcastledemesne/generaladmission/en/product/627460?date=2025-03-29&fbclid=IwY2xjawJSJkpleHRuA2FlbQIxMAABHY13WncUIW1ZRmeD16b8w71apxlhYJ2fgZlqhuar204tQvkpVQIaBr0L1w_aem_EQcpaeuyMnZMYdsDim-7IQ">tickets can be pre-booked</a> or paid for on the day.
+								</p>
+								<div style="clear:left"></div>
+
+								<hr>
+
+
+								<h3 style="margin-bottom:5px;">Hank Green Visit to Birr Castle</h3>
+								<h5 style="margin-bottom:0px;">March 2025 - Birr Castle Demesne, Ireland</h5><h6><b>Private Tour</b></h6>
+								<p><span class="image left"><img src="images/Hank_Green_Birr_Castle.jpg" alt=""/></span>Famous Science Communicator and novelist <a href = "https://en.wikipedia.org/wiki/Hank_Green">Hank Green</a> stopped by Birr as part of his visit to Ireland. Hank had previously made a <a href="https://youtu.be/GuErXHIPS7A?si=lmn4wTn5kjYce5F9">video on the Leviathan of Parsonstown</a>. I provided a private tour for him and his family, detailing the history of astronomy at Birr. 
+								</p>
+								<div style="clear:left"></div>
+
+								<hr>
+
 								<h3 style="margin-bottom:5px;">Irish Astronomy Week "Walk and Talk" Tours</h3>
-								<h5 style="margin-bottom:0px;">May 2025 - Birr Castle Demesne, Ireland</h5><h6><b>Education and Public Engagment</b></h6>
+								<h5 style="margin-bottom:0px;">March 2025 - Birr Castle Demesne, Ireland</h5><h6><b>Education and Public Engagment</b></h6>
 								<p><span class="image left"><img src="images/alberto_leviathan.png" alt=""/></span>I gave two tours as part of Irish Astronomy Week, titled “Leviathan to LOFAR Walk and Talk" at <a href="https://birrcastle.com/" target="_blank">Birr Castle Demesne</a>.
 								</br>
 								This guided tour explored the rich astronomical heritage of Birr, from the historic 19th-century Leviathan telescope to the cutting-edge 21st-century I-LOFAR radio telescope. I covered the engineering marvels of the Leviathan, once the world’s largest telescope, and the groundbreaking research conducted at I-LOFAR, highlighting Ireland’s pivotal role in the future of radio astronomy.
