Public Speaking and keywords

--- a/speaking.html
+++ b/speaking.html
@@ -99,23 +99,25 @@
 								</ul>
 
 							</br>
-								<h3 style="margin-bottom:5px;">Upcoming - Dublin Astronomical Society</h3>
+							
+
+								<h3 style="margin-bottom:5px;">University of Galway Astronomy Society</h3>
 								<h5 style="margin-bottom:0px;">April 2025 - Birr Castle Demesne, Ireland</h5><h6><b>Education and Public Engagment</b></h6>
-								<p><span class="image left"><img src="images/pic05.png" alt=""/></span>This will be a tour for the Dublin Astronomical Society Society, exploring the history of astronomy at Birr Castle Demesne. The Irish LOw Frequency ARray (I-LOFAR) will be discussed in detail.
+								<p><span class="image left"><img src="images/pic05.png" alt=""/></span>This  tour for the University of Galway Astronomy Society explored the history of astronomy at Birr Castle Demesne. The Irish LOw Frequency ARray (I-LOFAR) was discussed in detail, highlighting countrywide and international research collaborations.
 								</p>
 								<div style="clear:left"></div>
 
 								<hr>
 
-								<h3 style="margin-bottom:5px;">Upcoming - University of Galway Astronomy Society</h3>
+								<h3 style="margin-bottom:5px;">Upcoming - LFI Dublin</h3>
 								<h5 style="margin-bottom:0px;">April 2025 - Birr Castle Demesne, Ireland</h5><h6><b>Education and Public Engagment</b></h6>
-								<p><span class="image left"><img src="images/pic05.png" alt=""/></span>This will be a tour for the University of Galway Astronomy Society, exploring the history of astronomy at Birr Castle Demesne. The Irish LOw Frequency ARray (I-LOFAR) will be discussed in detail.
+								<p><span class="image left"><img src="images/pic05.png" alt=""/></span>Students from the Lycée Français International Samuel Beckett (LFI) school attended the demesne, exploring the history of astronomy at Birr Castle Demesne, from the Leviathan to I-LOFAR.
 								</p>
 								<div style="clear:left"></div>
 
 								<hr>
 
-								<h3 style="margin-bottom:5px;">Upcoming - Eclipse Observing at Birr Castle</h3>
+								<h3 style="margin-bottom:5px;">Eclipse Observing at Birr Castle</h3>
 								<h5 style="margin-bottom:0px;">March 29, 2025 - Birr Castle Demesne, Ireland</h5><h6><b>Education and Public Engagment</b></h6>
 								<p><span class="image left"><img src="images/birr_gen_tour_img.jpg" alt=""/></span>
 								Join Birr Castle for a stunning partial solar eclipse viewing this Saturday morning! Dr. Jeremy Rigney will guide you through the experience with a telescope (please note, you will not be viewing through the Great Leviathan Telescope).
